<resources>
    <string name="app_name">Mad Level 1 Task 2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="hint">T / F</string>
    <string name="submit">SUBMIT</string>
    <string name="fill_in_all">Please fill in all answers before submitting</string>
    <string name="invalid_input">Please only submit a T or a F</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
</resources>
